fix overflow-x in archive
close #32

--- a/themes/indigo-modified/source/css/_partial/layout.less
+++ b/themes/indigo-modified/source/css/_partial/layout.less
@@ -196,6 +196,7 @@ a[title="站长统计"] {
     .container {
         width: 100%;
         padding: 20px 0px;
+        overflow-x: hidden;
     }
 
     #menu {
